syntax = "proto3";

package service_account;
option go_package="adapters/protobuf";

message RequestGetAccount {
 int32 filter_id = 1;
}

message ResponseGetAccount {
 int32 id = 1;
 string name = 2;
 float balance = 3;
}


service AccountService {
	rpc GetAccount(RequestGetAccount) returns (ResponseGetAccount){};
}